<resources>
    <string name="app_name">SuperMercado</string>
    <string name="nombre">Nombre de usuario</string>
    <string name="passwd">Contraseña</string>
    <string name="enlaceRecuperacion">Si no recuerdas tu contraseña haz click <b><u><font color="#3234a8">aquí</font></u></b></string>
    <string name="sesionIniciada">Mantener la sesión iniciada</string>
    <string name="register">Si no tiene cuenta, <b><u><font color="#3234a8">Registrese aquí</font></u></b></string>
    <string name="terms"><b>Terminos y condiciones</b></string>
    <string-array name="lenguages">
        <item>Idioma</item>
        <item>Español</item>
        <item>English</item>
        <item>Français</item>
    </string-array>
</resources>